--- a/src/Components/LayOut/Header/mobile.css
+++ b/src/Components/LayOut/Header/mobile.css
@@ -35,10 +35,36 @@ hr{
 }
 
 /* hamburger menu */
+.fa-bars{
+  font-size: 26px;
+  color: rgb(68, 8, 60);
+}
+.animation{
+  animation: iconShake .25s infinite;
+}
+@keyframes iconShake {
+  0% {transform: rotate(0deg);}
+  25% {transform: rotate(90deg);}
+  50% {transform: rotate(180deg);}
+  75% {transform: rotate(270deg);}
+  100% {transform: rotate(360deg);}
+  /* 0% {transform: rotate(0deg);}
+  25% {transform: rotate(10deg);}
+  50% {transform: rotate(0deg);}
+  75% {transform: rotate(-10deg);}
+  100% {transform: rotate(0deg);} */
+}
 .hamburger-btn{
   border: none;
   background: transparent;
   margin-right: 10px;
+}
+.menu-item{
+  margin-bottom: 1.5rem;
+  color: black;
+}
+.menu-item span{
+  color: palevioletred;
 }
 /* General sidebar styles */
 .bm-menu {
