--- a/src/Routes/Home/mobile.css
+++ b/src/Routes/Home/mobile.css
@@ -16,6 +16,6 @@
     color: rgba(26, 25, 25, 0.925);
     width: fit-content;
     border-radius: 1rem;
-    box-shadow: rgba(0, 0, 0, 0.15) 1.95px 1.95px 2.6px;
+    /* box-shadow: rgba(0, 0, 0, 0.15) 1.95px 1.95px 2.6px; */
     background: linear-gradient(45deg,white, white, rgb(223, 173, 190), rgb(219, 144, 169), palevioletred);
 }
