coment & each each goods info styles completed

--- a/src/Components/App.css
+++ b/src/Components/App.css
@@ -1,3 +1,10 @@
+body{
+  font-family: 'Sahel', sans-serif;
+}
+*{
+  font-family: 'Sahel', sans-serif;
+}
+
 .App {
   text-align: center;
 }
@@ -37,6 +44,9 @@
   }
 }
 input:focus{
+  outline: none;
+}
+textarea:focus{
   outline: none;
 }
 
