--- a/src/index.css
+++ b/src/index.css
@@ -1,3 +1,5 @@
+
+
 body {
   margin: 0;
   font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', 'Roboto', 'Oxygen',
@@ -7,7 +9,8 @@ body {
   -moz-osx-font-smoothing: grayscale;
   font-family: 'Sahel', sans-serif;
   direction: rtl;
-  width: 100vw;
+  max-width: 100vw;
+  min-height: 100vh;
 }
 
 code {
