cart styles added

--- a/src/Components/LayOut/Footer/mobile.css
+++ b/src/Components/LayOut/Footer/mobile.css
@@ -3,6 +3,7 @@
     margin-top: 20vw;
     background: rgba(233, 232, 232, 0.548);
     font-family: 'Lalezar', cursive;
+    bottom: 0%;
 }
 #footer *{
     font-family: "Lalezar", cursive;
