--- a/src/Components/LayOut/Header/mobile.css
+++ b/src/Components/LayOut/Header/mobile.css
@@ -123,3 +123,11 @@ hr{
   border: none;
   width: 100vw;
 }
+.search-ul a{
+  text-decoration: none;
+  color: black;
+}
+.search-result{
+  border-top: 1px solid rgba(189, 189, 189, 0.596);
+  
+}
