--- a/src/Routes/Contact/styles.css
+++ b/src/Routes/Contact/styles.css
@@ -24,6 +24,10 @@
   border-radius: 1rem 0.2rem 1rem 0.2rem;
   margin-right: auto;
 }
+.contact button :focus, 
+.contact button ::selection{
+  outline: none;
+}
 
 /* message was sended */
 .send-msg {
